--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "pug": "^2.0.3",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^6.1.4"
   }
 }
