--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bunyan": "^1.8.12",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -21,8 +22,7 @@
     "pug": "^2.0.3",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0",
-    "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
