--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -20,6 +21,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
+    "save": "^2.4.0",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0",
     "uuid": "^3.3.2"
@@ -27,6 +29,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "mocha": "^6.1.4"
   }
 }
