--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
+    "rbac": "^5.0.3",
     "save": "^2.4.0",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0",
